Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50349

[REG 5.4.2 => 5.5.0/1] QML Package component crash at startup if used with Repeater

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0 Alpha
    • 5.5.0, 5.5.1, 5.7, 5.9.0 Beta 4, 5.9.4, 5.11.0 Beta 2
    • None
    • Windows 7 SP1 64 bits
      Compiled under MSVC 2013

      When trying to execute the code contained in the attachment main.qml on Qt 5.5.0 or 5.5.1 : app automatically crashes.

      On Qt 5.4.2 everything works at expected.

      NOTE : With a GridView instead of a [Flow|Row|Column]/Repeater everything works perfectly.

      main.qml :

      main.qml
      import QtQuick 2.4
      import QtQuick.Window 2.0
      import QtQml.Models 2.1
      
      Window {
          visible: true
          width: 640
          height: 480
      
          ListModel {
              id: myModel
              ListElement { display: "One" ; category: "1" }
              ListElement { display: "Two" ; category: "1" }
              ListElement { display: "Three" ; category: "1" }
          }
      
          DelegateModel {
              id: visualModel
              delegate: Package {
                  Text { id: listDelegate; Package.name: 'list' }
                  Text { id: flowDelegate; Package.name: 'flow' }
              }
              model: myModel
          }
      
          ListView {
              id: lv
              width: parent.width
              model: visualModel.parts.list
          }
      
          Flow {
              width: parent.width
              height: 50
      
              Repeater {
                 model: visualModel.parts.flow
              }
          }
      }
      

        1. main.qml
          3 kB
        2. project.zip
          2 kB
        3. qtbug50349.tar.gz
          0.7 kB
        4. startup error 5.5.x .PNG
          startup error 5.5.x .PNG
          33 kB
        5. work on 5.4.2 (part 1).PNG
          work on 5.4.2 (part 1).PNG
          26 kB
        6. work on 5.4.2 (part 2).PNG
          work on 5.4.2 (part 2).PNG
          29 kB
        For Gerrit Dashboard: QTBUG-50349
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            blabbe Boris LABBE
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes